# GameofLifePixelsRust

./: Cargo.toml
src/: main.rs
