[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
pixels = "0.9.0"
rand = "0.8.5"
rayon = "1.5.3"
winit = "0.26.1"
winit_input_helper = "0.12.0"
